# slinger

./: .gitignore  CMakeLists.txt  Makefile  log_macros.h  main.cpp  open_browser.h
cmake/modules/: FindCasablanca.cmake
slinger/: main.cpp
slinger.xcodeproj/: project.pbxproj
spotify_api/: spotify_api.h
